--- a/timeline.html
+++ b/timeline.html
@@ -27,6 +27,17 @@
     .axis text {
       font: 10px sans-serif;
     }
+    .stations {
+      stroke: red;
+      stroke-width:2px;
+    }
+    .station{
+      fill:green;
+      fill-opacity:.2;
+      stroke:          red;
+      stroke-width:    1px;
+
+    }
 
     .delivery {
       stroke:          steelblue;
@@ -141,6 +152,10 @@
           .attr("width",  outerWidth)
           .attr("height", outerHeight);
 
+    var stationsG = svg.append("g")
+          .attr("class", "stations")
+          .attr('transform', 'translate(' + 0 + "," + 0 + ')');
+
     var g = svg.append("g")
           .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
@@ -180,14 +195,29 @@
       for (var i = 1; i < stationCounts.length; i++) {
         stationStackedCount[i] = stationStackedCount[i-1]+ stationCounts[i];
       };
-
+      var stationStacked = [];
+      stationStacked[0]={"y1":0,"y2":stationStackedCount[0]}
+      for (var i = 1; i < stationStackedCount.length; i++) {
+        stationStacked[i] = {
+                              "y1":stationStackedCount[i-1],
+                              "y2":stationStackedCount[i]
+                            };
+      };
 
       console.log(stationCounts);
       console.log(stationStackedCount);
-      var nested = d3.nest()
-          .key(function (d){ return d['station']; })
-          .entries(data);
-      console.log('nested',nested);
+      console.log(stationStacked);
+
+      var stationsS = stationsG.selectAll(".station").data(stationStacked);
+      stationsS.enter().append("rect"); // stations should never exit
+
+      stationsS
+          .attr("x", function(d,i) { return 0;})
+          .attr("y", function(d,i) { return d.y1*rowHeight+ (rowHeight/2);})
+          .attr("width",innerWidth)
+          .attr("height", function(d,i) { return d.y2*rowHeight;})
+          .attr("class", "station");
+
 
       //setup axii
       xAxisG.call(xAxis);
@@ -209,11 +239,11 @@
 
       // Update
       deliveriesS
-        .attr("x1", function(d,i) { return xScale(d.startTime); })
-        .attr("y1", function(d,i) { return yDeliveryScale(i+1); })
-        .attr("x2", function(d,i) { return xScale(d.endTime); })
-        .attr("y2", function(d,i) { return yDeliveryScale(i+1); })
-        .attr("class", "delivery");
+          .attr("x1", function(d,i) { return xScale(d.startTime); })
+          .attr("y1", function(d,i) { return yDeliveryScale(i+1); })
+          .attr("x2", function(d,i) { return xScale(d.endTime); })
+          .attr("y2", function(d,i) { return yDeliveryScale(i+1); })
+          .attr("class", "delivery");
 
     }
 
