--- a/timeline.html
+++ b/timeline.html
@@ -39,6 +39,9 @@
     .station:nth-child(even) {
       fill:#1A3047;
     }
+    .station .name{
+      fill: white;
+    }
 
     .delivery {
       stroke:          steelblue;
@@ -62,6 +65,9 @@
     var rowHeight   = 45;
     var xAxisHeight = 30;
     var xAxisWidth  = 3000;
+    var stationTextHeight = 20;
+    var stationTextPadding = {top: 10, right: 0, bottom: 0, left: 10};
+
     var margin      = {top: 0, right: 0, bottom: 30, left: 0};
     var outerWidth  = document.documentElement.clientWidth;
     var outerHeight = document.documentElement.clientHeight;
@@ -117,8 +123,8 @@
       variation = Math.random() * 1;
       variationMinutes = Math.random()*60;
 
-      deliveries.push({  startTime: new Date(2000, 0, 1,12+(i*.2)+variation,variationMinutes), 
-                         endTime:   new Date(2000, 0, 1,12+(i*.2)+variation + duration,variationMinutes),
+      deliveries.push({  startTime: new Date(2000, 0, 1,8+(i*.2)+variation,variationMinutes), 
+                         endTime:   new Date(2000, 0, 1,8+(i*.2)+variation + duration,variationMinutes),
                          station:Math.round(i/2.5)
                        });
     }
@@ -128,22 +134,22 @@
           .attr("width",  outerWidth)
           .attr("height", outerHeight);
 
-    var stationsG = svg.append("g")
+    var stationsGroup = svg.append("g")
           .attr("class", "stations")
           .attr('transform', 'translate(' + 0 + "," + 0 + ')');
 
     var g = svg.append("g")
           .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-    var deliveriesG = g.append("g")
+    var deliveriesGroup = g.append("g")
           .attr("class", "deliveries")
           .attr('transform', 'translate(' + startingX + "," + 0 + ')');
 
-    var xAxisG = g.append("g")
+    var xAxisGroup = g.append("g")
           .attr("class", "x axis")
           .attr('transform', 'translate(' + startingX + "," +  innerHeight + ')');
 
-    var yAxisG = g.append("g")
+    var yAxisGroup = g.append("g")
           .attr("class", "y axis");
         
 
@@ -177,6 +183,8 @@
                           "y0":0,
                           "y":stationCounts[0],
                           "name": stations[0]}
+
+      //this needs to factor in zooming, or add it to zoom section
       for (var i = 1; i < stationStackedCount.length; i++) {
         stationStacked[i] = {
                               "y0":stationStackedCount[i-1],
@@ -184,39 +192,50 @@
                               "name":stations[i]
                             };
       };
+
       console.log(stationStacked);
 
-      var stationsS = stationsG.selectAll(".station").data(stationStacked);
-      stationsS.enter().append("rect"); // stations should never exit
+      //setup stations overlay and text  NOTE - stations is outside of the zoomable section, as not to change it too
+      var stationsSelectAll = stationsGroup.selectAll(".station").data(stationStacked);
+      stationsSelectAll.enter().append("g").attr("class", "station"); // stations should never exit
 
-      stationsS
+      stationsSelectAll.append("rect")
           .attr("x", function(d,i) { return 0;})
-          .attr("y", function(d,i) { return d.y0*rowHeight+ (rowHeight/2);})
+          .attr("y", function(d,i) { return d.y0*rowHeight + (rowHeight/2);})
           .attr("width",innerWidth)
           .attr("height", function(d,i) { return d.y*rowHeight;})
-          .attr("class", "station");
+
+      stationsSelectAll.append("text")
+          .attr("x", function(d,i) { return stationTextPadding.left;})
+          .attr("y", function(d,i) { return d.y0*rowHeight + (rowHeight/2) + stationTextHeight + stationTextPadding.top;})
+          .text(function(d,i){return d.name})
+          .attr("class","name")
+          .attr("font-size", stationTextHeight + "px");
 
 
       //setup axii
-      xAxisG.call(xAxis);
-      yAxisG.append("line")
+      xAxisGroup.call(xAxis);
+      yAxisGroup.append("line")
           .style("stroke-dasharray", ("2, 2"))
           .attr("x1", innerWidth/2)
           .attr("y1", margin.top)
           .attr("x2", outerWidth/2)
           .attr("y2", innerHeight);
 
+
+
+
       // Bind data
-      var deliveriesS = deliveriesG.selectAll(".delivery").data(data);
+      var deliveriesSelectAll = deliveriesGroup.selectAll(".delivery").data(data);
 
       // Enter
-      deliveriesS.enter().append("line");
+      deliveriesSelectAll.enter().append("line");
 
       // Exit
-      deliveriesS.exit().remove();
+      deliveriesSelectAll.exit().remove();
 
       // Update
-      deliveriesS
+      deliveriesSelectAll
           .attr("x1", function(d,i) { return xScale(d.startTime); })
           .attr("y1", function(d,i) { return yDeliveryScale(i+1); })
           .attr("x2", function(d,i) { return xScale(d.endTime); })
