--- a/timeline.html
+++ b/timeline.html
@@ -128,8 +128,28 @@
 
       deliveries.push({  startTime: new Date(2000, 0, 1,8+(i*.2)+variation,variationMinutes), 
                          endTime:   new Date(2000, 0, 1,8+(i*.2)+variation + duration,variationMinutes),
-                         station:Math.round(i/2.5)
-                       });
+                         station:Math.round(i/2.5),
+                         stationStartTimes:[
+                                              0,
+                                              5,
+                                              55,
+                                              65,
+                                              105,
+                                              125,
+                                              155,
+                                              180
+                                            ],
+                          stationEndTimes: [
+                                            4,
+                                            52,
+                                            62,
+                                            98,
+                                            123,
+                                            151,
+                                            173,
+                                            195
+                                            ]
+                         });
     }
 
 
@@ -192,14 +212,7 @@
           .tickFormat(d3.time.format('%H'))
           .scale(xScale);
 
-
-
-
-
-
-    function render(data){
-
-      //data manipulation
+    function stationCalculations(data){
       stationCounts =[0,0,0,0,0,0,0,0];
       stationStackedCount=[0,0,0,0,0,0,0,0]
       stationStacked=[];
@@ -238,6 +251,15 @@
                     bottom: (-1*stationHeight) + innerHeight - xAxisHeight,
                     left:   (-1*xAxisWidth) + outerWidth
                   }
+    }
+
+
+
+
+    function render(data){
+
+      //data manipulation
+      stationCalculations(data);
 
       //setup stations overlay and text  NOTE - stations is outside of the zoomable section, as not to change it too
       var stationsSelectAll = stationsGroup.selectAll(".station").data(stationStacked);
